<resources>
    <string name="app_name">KSL</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="menu_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_table">Table</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_matches">Matches</string>
    <string name="menu_live">Live</string>
</resources>